# ringer

./: .gitignore  CMakeLists.txt  README.md  answerrer.cpp  build.sh  caller.cpp  ringer.cpp  sampling.md
docs/: bootstrapping_device.md  general.md  pjsip.md  tensorflow_lite.md
src/: CMakeLists.txt  answerrer.cpp  caller.cpp  ringer.cpp
src/account/: ringer_account.cpp
src/call/: CMakeLists.txt  ringer_call.cpp
src/client/: CMakeLists.txt  answerrer.cpp  caller.cpp
src/client/account/: CMakeLists.txt  ringer_account.cpp  ringer_account.hpp
src/client/call/: ringer_call.cpp  ringer_call.hpp
src/client/endpoint/: ringer_endpoint.cpp  ringer_endpoint.hpp
src/client/pjsip_util/: ringer_pjsip_pool.hpp
src/common/: CMakeLists.txt
src/common/logger/: CMakeLists.txt  ringer_logger.cpp  ringer_logger.hpp
src/common/pjsip_util/: CMakeLists.txt  ringer_pjsip_pool_factory.cpp  ringer_pjsip_pool_factory.hpp  ringer_pjsip_type_util.cpp  ringer_pjsip_type_util.hpp
src/endpoint/: CMakeLists.txt  ringer_endpoint.cpp  ringer_endpoint.hpp
src/logger/: ringer_logger.cpp  ringer_logger.hpp
src/pjsip_util/: CMakeLists.txt  ringer_pjsip_pool.cpp  ringer_pjsip_pool_factory.hpp
src/server/: CMakeLists.txt  proxy_server.cpp  ringer_proxy_server.cpp
src/server/proxy/: CMakeLists.txt  proxy.cpp  proxy.hpp  ringer_proxy.cpp  ringer_proxy.hpp
src/server/user_database/: CMakeLists.txt  ringer_user_database.cpp  ringer_user_database.hpp
